# openhistorian-python

./: .gitignore  CreateReadMeSymLink.cmd  LICENSE  README.md  openhistorian-python.pyproj  openhistorian-python.sln  setup.cfg
.github/workflows/: codeql-analysis.yml
docs/: BuildSteps.txt  README.md  _config.yml  index.md
docs/_layouts/: default.html
src/gsf/: README.md  __init__.py  encoding7Bit.py
src/openHistorian/: README.md  historianConnection.py  historianKey.py  metadataCache.py
src/snapDB/: README.md  encodingDefinition.py  snapConnection.py
tests/: SampleNotebook.ipynb  main.py  readTest.py  writeTest.py
