[metadata]
name = openhistorian
version = 1.0.4
author = J. Ritchie Carroll
author_email = rcarroll@gridprotectionalliance.org
description = openHistorian Python API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = openHistorian, streaming, key-value, time-series, database, synchrophasor
license_file = LICENSE
url = https://github.com/GridProtectionAlliance/openhistorian-python
download_url = https://pypi.org/project/openhistorian/
project_urls =
    Bug Tracker = https://github.com/GridProtectionAlliance/openhistorian-python/issues
    Documentation = https://gridprotectionalliance.github.io/openhistorian-python/
    Source Code = https://github.com/GridProtectionAlliance/openhistorian-python
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Database :: Front-Ends
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.9

[options.packages.find]
where=src